--- a/assets/scss/components/_toolbar-socials.scss
+++ b/assets/scss/components/_toolbar-socials.scss
@@ -64,7 +64,7 @@
         border: 2px solid transparent;
         border-radius: 50%;
         background: transparent;
-        color: color-contrast(#fff);
+        color: #fff;
         line-height: 1;
         filter: drop-shadow(0 3px 5px rgb(0 0 0 / 85%));
         transition:
@@ -76,7 +76,7 @@
         &:focus,
         &:hover,
         &:active {
-            color: color-contrast(#fff) !important;
+            color: #fff !important;
         }
         &:focus-visible {
             outline: 2px solid currentcolor;
